# school-billing

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: build.yml
setup/: build.py  setup.bat
src/: main.py
